# ansible-docker-mailserver

./: .gitignore  .gitmodules  LICENSE  README.md  main.yml  pyproject.toml  requirements.yml
roles/: ansible_plugins  debops.apt_install  debops.apt_preferences  debops.core  debops.fail2ban  debops.ferm  debops.locales  debops.unattended_upgrades
roles/docker_mailserver/tasks/: main.yml
roles/docker_mailserver/templates/: postfix-accounts.cf.j2  postfix-virtual.cf.j2
roles/ouroboros/tasks/: main.yml
