[tool.poetry]
name = "ansible-decent-desktop"
version = "0.1.0"
description = ""
authors = ["Anton Nesterov <anton@nesterov.cc>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ansible = "^8.7.0"
debops = "^3.1.0"
redis = "^5.0.4"

[tool.poetry.group.dev.dependencies]
molecule = "^24.2.1"
yamllint = "^1.35.1"
molecule-plugins = {extras = ["vagrant"], version = "^23.5.3"}
ansible-lint = { version = "^24.2.3", markers = "platform_system != 'Windows'" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
